--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -59,3 +59,9 @@ img.full {
   font-style: italic;
   border-color: var(--ifm-color-primary);
 }
+
+blockquote {
+  margin: 3rem 0;
+  background: #fff8a5;
+  padding: 10px;
+}
