--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -13,6 +13,7 @@
   --ifm-color-primary-light: #33925d;
   --ifm-color-primary-lighter: #359962;
   --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-highlight: #fff2a4;
   --ifm-code-font-size: 95%;
 }
 
@@ -25,6 +26,7 @@
   --ifm-color-primary-light: #29d5b0;
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-highlight: #333;
 }
 
 .docusaurus-highlight-code-line {
@@ -39,8 +41,8 @@
 }
 
 img {
-  max-width: 600px;
-  width: 100%;
+  max-height: 300px;
+  width: auto;
 }
 
 img.full {
@@ -62,6 +64,6 @@ img.full {
 
 blockquote {
   margin: 3rem 0;
-  background: #fff8a5;
+  background: var(--ifm-color-highlight);
   padding: 10px;
 }
